--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=joanrojasrodriguez
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bdventas?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/publicaciones?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
